5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4151/executions/1758_1580.log
== TEST (2019-05-28 10:46:20) 
-- CODE:
v=array(eval(input("digite as notas: ")))
n=array(eval(input("digite os nomes ")))
f=0
a=0
r=0
i=0
while(i<size(v)):
	if(v[i]=-1):
		f=f+1
print(f)
	elif(v[i]>=6):
		a=a+1
print(a)
	elif(v[i]<6 and v[i]!=-1)
		r=r+1
print(r)
print(round(sum(v)/size(v),2))

-- ERROR:
File "XXXX", line 8
    if(v[i]=-1):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:46:38) 
-- CODE:
v=array(eval(input("digite as notas: ")))
n=array(eval(input("digite os nomes ")))
f=0
a=0
r=0
i=0
while(i<size(v)):
	if(v[i]==-1):
		f=f+1
print(f)
	elif(v[i]>=6):
		a=a+1
print(a)
	elif(v[i]<6 and v[i]!=-1)
		r=r+1
print(r)
print(round(sum(v)/size(v),2))

-- ERROR:
File "XXXX", line 11
    elif(v[i]>=6):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:48:47) 
-- CODE:
v=array(eval(input("digite as notas: ")))
n=array(eval(input("digite os nomes ")))
f=0
a=0
r=0
i=0
while(i<size(v)):
	if(v[i]==-1):
		f=f+1
print(f)
	elif(v[i]>=6):
		a=a+1
print(a)
	elif(v[i]<6 and v[i]!=-1)
		r=r+1
	i=i+1
print(r)
print(round(sum(v)/size(v),2))

-- ERROR:
File "XXXX", line 11
    elif(v[i]>=6):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:50:07) 
-- CODE:
v=array(eval(input("digite as notas: ")))
n=array(eval(input("digite os nomes ")))
f=0
a=0
r=0
i=0
while(i<size(v)):
	if(v[i]==-1):
		f=f+1

	elif(v[i]>=6):
		a=a+1

	elif(v[i]<6 and v[i]!=-1)
		r=r+1
	i=i+1
print(r)
print(round(sum(v)/size(v),2))

-- ERROR:
File "XXXX", line 14
    elif(v[i]<6 and v[i]!=-1)
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:50:59) 
-- CODE:
v=array(eval(input("digite as notas: ")))
n=array(eval(input("digite os nomes ")))
f=0
a=0
r=0
i=0
while(i<size(v)):
	if(v[i]==-1):
		f=f+1

	elif(v[i]>=6):
		a=a+1

	elif(v[i]<6 and v[i]!=-1):
		r=r+1
	i=i+1
print(r)
print(round(sum(v)/size(v),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    v=array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:51:56) 
-- CODE:
from numpy import*
v=array(eval(input("digite as notas: ")))
n=array(eval(input("digite os nomes ")))
f=0
a=0
r=0
i=0
while(i<size(v)):
	if(v[i]==-1):
		f=f+1

	elif(v[i]>=6):
		a=a+1

	elif(v[i]<6 and v[i]!=-1):
		r=r+1
	i=i+1
print(r)
print(round(sum(v)/size(v),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:00:33) 
-- CODE:
from numpy import*
v=array(eval(input("digite as notas: ")))
n=array(eval(input("digite os nomes ")))
f=0
a=0
r=0
i=0
while(i<size(v)):
	if(v[i]==-1):
		f=f+1

	elif(v[i]>=6):
		a=a+1

	elif(v[i]<6 and v[i]!=-1):
		r=r+1
	i=i+1
v=0	
while(v[i]!=max(v)):
	v=v+1
print(f)
print(a)
print(r)
print(round(sum(v)/size(v),2))
print(n[v])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:00:51) 
-- CODE:
from numpy import*
v=array(eval(input("digite as notas: ")))
n=array(eval(input("digite os nomes ")))
f=0
a=0
r=0
i=0
while(i<size(v)):
	if(v[i]==-1):
		f=f+1

	elif(v[i]>=6):
		a=a+1

	elif(v[i]<6 and v[i]!=-1):
		r=r+1
	i=i+1
v=0	
while(v[i]!=max(v)):
	v=v+1
print(f)
print(a)
print(r)
print(round(sum(v)/size(v),2))
print(n[v])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:03:10) 
-- CODE:
from numpy import*
v=array(eval(input("digite as notas: ")))
n=array(eval(input("digite os nomes ")))
f=0
a=0
r=0
i=0
while(i<size(v)):
	if(v[i]==-1):
		f=f+1

	elif(v[i]>=6):
		a=a+1

	elif(v[i]<6 and v[i]!=-1):
		r=r+1
	i=i+1
v=0	
while(v[v]!=max(v)):
	v=v+1
print(f)
print(a)
print(r)
print(round(sum(v)/size(v),2))
print(n[v])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:03:22) 
-- CODE:
from numpy import*
v=array(eval(input("digite as notas: ")))
n=array(eval(input("digite os nomes ")))
f=0
a=0
r=0
i=0
while(i<size(v)):
	if(v[i]==-1):
		f=f+1

	elif(v[i]>=6):
		a=a+1

	elif(v[i]<6 and v[i]!=-1):
		r=r+1
	i=i+1
v=0	
while(v[v]!=max(v)):
	v=v+1
print(f)
print(a)
print(r)
print(round(sum(v)/size(v),2))
print(n[v])

-- EXECUTION TIME:
0.380041
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1580/main.py", line 19, in <module>
    while(v[v]!=max(v)):
TypeError: 'int' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:03:26) 
-- CODE:
from numpy import*
v=array(eval(input("digite as notas: ")))
n=array(eval(input("digite os nomes ")))
f=0
a=0
r=0
i=0
while(i<size(v)):
	if(v[i]==-1):
		f=f+1

	elif(v[i]>=6):
		a=a+1

	elif(v[i]<6 and v[i]!=-1):
		r=r+1
	i=i+1
v=0	
while(v[v]!=max(v)):
	v=v+1
print(f)
print(a)
print(r)
print(round(sum(v)/size(v),2))
print(n[v])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:04:38) 
-- CODE:
from numpy import*
v=array(eval(input("digite as notas: ")))
n=array(eval(input("digite os nomes ")))
f=0
a=0
r=0
i=0
while(i<size(v)):
	if(v[i]==-1):
		f=f+1

	elif(v[i]>=6):
		a=a+1

	elif(v[i]<6 and v[i]!=-1):
		r=r+1
	i=i+1
p=0	
while(v[p]!=max(v)):
	p=p+1
print(f)
print(a)
print(r)
print(round(sum(v)/size(v),2))
print(n[v])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:06:01) 
-- CODE:
from numpy import*
v=array(eval(input("digite as notas: ")))
n=array(eval(input("digite os nomes ")))
f=0
a=0
r=0
i=0
while(i<size(v)):
	if(v[i]==-1):
		f=f+1

	elif(v[i]>=6):
		a=a+1

	elif(v[i]<6 and v[i]!=-1):
		r=r+1
	i=i+1
p=0	
while(v[p]!=max(v)):
	p=p+1
print(f)
print(a)
print(r)
print(round(sum(v)/size(v),2))
print(n[p])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:06:26) 
-- CODE:
from numpy import*
v=array(eval(input("digite as notas: ")))
n=array(eval(input("digite os nomes ")))
f=0
a=0
r=0
i=0
while(i<size(v)):
	if(v[i]==-1):
		f=f+1

	elif(v[i]>=6):
		a=a+1

	elif(v[i]<6 and v[i]!=-1):
		r=r+1
	i=i+1
p=0	
while(v[p]!=max(v)):
	p=p+1
print(f)
print(a)
print(r)
print(round(sum(v)/size(v),2))
print(n[p])

-- EXECUTION TIME:
0.479889
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
3.5
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
1.0
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:12:01) 
-- CODE:
from numpy import*
v=array(eval(input("digite as notas: ")))
n=array(eval(input("digite os nomes ")))
f=0
a=0
r=0
i=0
while(i<size(v)):
	if(v[i]==-1):
		f=f+1

	elif(v[i]>=6):
		a=a+1

	elif(v[i]<6 and v[i]!=-1):
		r=r+1
	i=i+1
p=0	
while(v[p]!=max(v)):
	p=p+1
print(f)
print(a)
print(r)
print(round((a+r)/a,2))
print(n[p])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:18:55) 
-- CODE:
from numpy import*
v=array(eval(input("digite as notas: ")))
n=array(eval(input("digite os nomes ")))
f=0
a=0
r=0
i=0
soma=0
somr=0
while(i<size(v)):
	if(v[i]==-1):
		f=f+1

	elif(v[i]>=6):
		a=a+1
		soma=soma+a
	elif(v[i]<6 and v[i]!=-1):
		r=r+1
		somr=somr+r
	i=i+1
p=0	
while(v[p]!=max(v)):
	p=p+1
print(f)
print(a)
print(r)
print(round((a+r)/soma+somr,2))
print(n[p])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:22:46) 
-- CODE:
from numpy import*
v=array(eval(input("digite as notas: ")))
n=array(eval(input("digite os nomes ")))
f=0
a=0
r=0
i=0
soma=0

while(i<size(v)):
	if(v[i]==-1):
		f=f+1

	elif(v[i]>=6):
		a=a+1
		
	elif(v[i]<6 and v[i]!=-1):
		r=r+1
	if(n[i]!=-1):
		soma=soma+1
		
	i=i+1
p=0	
while(v[p]!=max(v)):
	p=p+1
print(f)
print(a)
print(r)
print(round((a+r)/soma+somr,2))
print(n[p])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:23:16) 
-- CODE:
from numpy import*
v=array(eval(input("digite as notas: ")))
n=array(eval(input("digite os nomes ")))
f=0
a=0
r=0
i=0
soma=0

while(i<size(v)):
	if(v[i]==-1):
		f=f+1

	elif(v[i]>=6):
		a=a+1
		
	elif(v[i]<6 and v[i]!=-1):
		r=r+1
	if(n[i]!=-1):
		soma=soma+1
		
	i=i+1
p=0	
while(v[p]!=max(v)):
	p=p+1
print(f)
print(a)
print(r)
print(round((a+r)/soma+somr,2))
print(n[p])

-- EXECUTION TIME:
0.474986
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1580/main.py", line 29, in <module>
    print(round((a+r)/soma+somr,2))
NameError: name 'somr' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:24:21) 
-- CODE:
from numpy import*
v=array(eval(input("digite as notas: ")))
n=array(eval(input("digite os nomes ")))
f=0
a=0
r=0
i=0
soma=0

while(i<size(v)):
	if(v[i]==-1):
		f=f+1

	elif(v[i]>=6):
		a=a+1
		
	elif(v[i]<6 and v[i]!=-1):
		r=r+1
	if(v[i]!=-1):
		soma=soma+1
		
	i=i+1
p=0	
while(v[p]!=max(v)):
	p=p+1
print(f)
print(a)
print(r)
print(round((a+r)/soma,2))
print(n[p])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:26:21) 
-- CODE:
from numpy import*
v=array(eval(input("digite as notas: ")))
n=array(eval(input("digite os nomes ")))
f=0
a=0
r=0
i=0
soma=0

while(i<size(v)):
	if(v[i]==-1):
		f=f+1

	elif(v[i]>=6):
		a=a+1
		
	elif(v[i]<6 and v[i]!=-1):
		r=r+1
	if(v[i]!=-1):
		soma=soma+1
		
	i=i+1
p=0	
while(v[p]!=max(v)):
	p=p+1
print(f)
print(a)
print(r)
print(round(soma/size(v)-f,2))
print(n[p])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:26:40) 
-- CODE:
from numpy import*
v=array(eval(input("digite as notas: ")))
n=array(eval(input("digite os nomes ")))
f=0
a=0
r=0
i=0
soma=0

while(i<size(v)):
	if(v[i]==-1):
		f=f+1

	elif(v[i]>=6):
		a=a+1
		
	elif(v[i]<6 and v[i]!=-1):
		r=r+1
	if(v[i]!=-1):
		soma=soma+1
		
	i=i+1
p=0	
while(v[p]!=max(v)):
	p=p+1
print(f)
print(a)
print(r)
print(round(soma/size(v)-f,2))
print(n[p])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:27:39) 
-- CODE:
from numpy import*
v=array(eval(input("digite as notas: ")))
n=array(eval(input("digite os nomes ")))
f=0
a=0
r=0
i=0
soma=0

while(i<size(v)):
	if(v[i]==-1):
		f=f+1

	elif(v[i]>=6):
		a=a+1
		
	elif(v[i]<6 and v[i]!=-1):
		r=r+1
	if(v[i]!=-1):
		soma=soma+1
		
	i=i+1
p=0	
while(v[p]!=max(v)):
	p=p+1
print(f)
print(a)
print(r)
print(round(soma/(size(v)-f),2))
print(n[p])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:28:44) 
-- CODE:
from numpy import*
v=array(eval(input("digite as notas: ")))
n=array(eval(input("digite os nomes ")))
f=0
a=0
r=0
i=0
soma=0

while(i<size(v)):
	if(v[i]==-1):
		f=f+1

	elif(v[i]>=6):
		a=a+1
		
	elif(v[i]<6 and v[i]!=-1):
		r=r+1
	if(v[i]!=-1):
		soma=soma+v[i]
		
	i=i+1
p=0	
while(v[p]!=max(v)):
	p=p+1
print(f)
print(a)
print(r)
print(round(soma/(size(v)-f),2))
print(n[p])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:29:11) 
-- CODE:
from numpy import*
v=array(eval(input("digite as notas: ")))
n=array(eval(input("digite os nomes ")))
f=0
a=0
r=0
i=0
soma=0

while(i<size(v)):
	if(v[i]==-1):
		f=f+1

	elif(v[i]>=6):
		a=a+1
		
	elif(v[i]<6 and v[i]!=-1):
		r=r+1
	if(v[i]!=-1):
		soma=soma+v[i]
		
	i=i+1
p=0	
while(v[p]!=max(v)):
	p=p+1
print(f)
print(a)
print(r)
print(round(soma/(size(v)-f),2))
print(n[p])

-- EXECUTION TIME:
0.470235
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
